--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 *{
-  padding: 0;
-  margin: 0;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .container_pokemon {
@@ -8,31 +7,40 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 200px;
-  height: 300px;
+  width: 180px;
+  height: 250px;
   border-radius: 10px;
+  box-shadow: 0px 0px 20px 5px gray;
+
+  margin: 50px;
 }
 
 .container_img {
   background-color: chartreuse;
-  height: 170px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  height: 150px;
+  padding: 10px;
 }
 
-.container_img > img {
-  height: 150px;
+.container_img  img {
+  height: inherit;
   display: block;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
 
 .title_pokemon {
-  background-color: aqua;
+  /* background-color: aqua; */
   font-size: 25px;
   text-align: center;
+  margin: 0;
 }
 
 .description_pokemon {
-  background-color: brown;
-  padding: 10px 0px;
+  /* background-color: brown; */
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
 }
