--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,37 @@
 *{
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  color: white;
+}
+
+.container {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-rows: auto;
 }
 
 .container_pokemon {
-  background-color: #eee;
+  background-color: rgb(197, 1, 1);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   width: 180px;
   height: 250px;
   border-radius: 10px;
-  box-shadow: 0px 0px 20px 5px gray;
-
-  margin: 50px;
+  box-shadow: 0px 0px 10px 5px gray;
+  margin: 35px;
 }
 
 .container_img {
-  background-color: chartreuse;
+  background-color: white;
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -32,14 +47,12 @@
 }
 
 .title_pokemon {
-  /* background-color: aqua; */
   font-size: 25px;
   text-align: center;
   margin: 0;
 }
 
 .description_pokemon {
-  /* background-color: brown; */
   display: flex;
   justify-content: space-evenly;
   padding: 10px;
