--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-*{
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+* {
+  font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
 
@@ -11,49 +11,149 @@ body {
   color: white;
 }
 
+.header {
+  text-align: center;
+  margin-bottom: 10rem;
+}
+
+.header__title {
+  font-size: 6rem;
+  color: black;
+}
+
+.searched {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+}
+
+.searched__input {
+  padding: 1rem;
+  width: 40vw;
+  border: none;
+  height: inherit;
+  border-radius: 10px 0 0 10px;
+  border: 1px solid orange;
+  background-color: #fff;
+  font-size: 1.6rem;
+}
+
+.searched__input:focus-visible {
+  border: 3px solid orange;
+  outline: none;
+}
+
+.searched__button {
+  padding: 1rem;
+  font-size: 1.6rem;
+  border: none;
+  height: inherit;
+  border-radius: 0 10px 10px 0;
+  background-color: orange;
+  color: #fff;
+  font-weight: bold;
+}
+
+.searched__button:focus-visible {
+  outline: none;
+}
+
 .container {
-  margin: 0 auto;
+  margin: 3rem;
+  margin-top: 10rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  gap: 2.5rem;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   grid-template-rows: auto;
 }
 
 .container_pokemon {
-  background-color: rgb(197, 1, 1);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 180px;
-  height: 250px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 5px gray;
-  margin: 35px;
+  border-radius: 1rem;
+  padding: 1rem;
+  justify-self: center;
 }
 
 .container_img {
   background-color: white;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  margin: auto;
-  height: 150px;
-  padding: 10px;
+  border-radius: 1rem;
+  margin: 1.5rem 0;
+  height: 15rem;
+  padding: 1rem;
 }
 
-.container_img  img {
+.container_img img {
   height: inherit;
   display: block;
   margin: auto;
 }
 
 .title_pokemon {
-  font-size: 25px;
+  font-size: 2.5rem;
   text-align: center;
   margin: 0;
 }
 
 .description_pokemon {
-  display: flex;
-  justify-content: space-evenly;
-  padding: 10px;
+  text-align: center;
+  padding: 1rem;
+}
+
+.type_pokemon {
+  font-size: 1.6rem;
+}
+
+.type_fire {
+  background-color: #f25c05;
+}
+.type_normal {
+  background-color: #e8c271;
+}
+.type_water {
+  background-color: #05898f;
+}
+.type_grass {
+  background-color: #94bf36;
+}
+.type_electric {
+  background-color: #f2e205;
+}
+.type_ice {
+  background-color: #5c8ef2;
+}
+.type_fighting {
+  background-color: #8c0404;
+}
+.type_poison {
+  background-color: #9a359e;
+}
+.type_ground {
+  background-color: #7e582e;
+}
+.type_flying {
+  background-color: #73d99f;
+}
+.type_psychic {
+  background-color: #191919;
+}
+.type_bug {
+  background-color: #f2e85e;
+}
+.type_rock {
+  background-color: #40312c;
+}
+.type_ghost {
+  background-color: #3b7d8c;
+}
+.type_dark {
+  background-color: #0a2473;
+}
+.type_dragon {
+  background-color: #bf3f34;
+}
+.type_steel {
+  background-color: #202833;
+}
+.type_fairy {
+  background-color: #bcbf56;
 }
