Created pokemon search system Added pokemon results styles

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -59,6 +59,17 @@ body {
   outline: none;
 }
 
+#results {
+  display: flex;
+  margin: 3rem;
+  justify-content: center;
+}
+
+.text__error {
+  color: black;
+  font-size: 3rem;
+}
+
 .container {
   margin: 3rem;
   margin-top: 10rem;
