--- a/docs/style.css
+++ b/docs/style.css
@@ -104,6 +104,17 @@ body {
   grid-template-rows: auto;
 }
 
+.evolution {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 3rem;
+  flex-wrap: wrap;
+}
+
+.evolution > div {
+  margin: 2rem 0;
+}
+
 .container_pokemon {
   border-radius: 0.5rem;
   padding: 1rem;
@@ -158,7 +169,8 @@ body {
 }
 
 .pokemon {
-  grid-column: 3 / 8;
+  margin: 2rem auto;
+  width: 60vw;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 100px 1fr;
@@ -167,17 +179,32 @@ body {
   height: 55vh;
 }
 
+.pokemon__description_light {
+  color: #eee;
+}
+
+.pokemon__description_dark {
+  color: #666;
+}
+
+.pokemon {
+  margin: 1rem auto;
+  width: 90vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px auto auto;
+  padding: 2rem 0;
+  border-radius: 1rem;
+  height: auto;
+}
+
 .pokemon__title {
-  grid-column: 1 / 2;
-  grid-row: 1/2;
   font-size: 4rem;
   margin: 0;
   text-align: center;
 }
 
 .pokemon__image {
-  grid-column: 1/2;
-  grid-row: 2/3;
   display: inline-block;
 }
 
@@ -187,21 +214,12 @@ body {
 
 .pokemon__description {
   display: flex;
-  grid-column: 2/3;
-  grid-row: 1/3;
   font-size: 2rem;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-around;
   flex-direction: row;
-}
-
-.pokemon__description_light {
-  color: #eee;
-}
-
-.pokemon__description_dark {
-  color: #666;
+  padding: 1rem;
 }
 
 .pokemon__description > div > span {
@@ -215,7 +233,7 @@ body {
 .pokemon__description--type {
   background-color: #eeeeee5b;
   border-radius: 2rem;
-  padding: 2.5rem;
+  padding: 0.5rem;
   min-width: 49%;
   max-width: 60%;
 }
@@ -224,20 +242,9 @@ body {
   background-color: #eeeeee5b;
   border-radius: 2rem;
   width: 100%;
-  padding: 3rem;
+  padding: 1rem;
+  margin-top: 0.5rem;
 }
-
-/* .type__list {
-
-}
-
-.abilities__list {
-
-}
-
-.stats__list {
-
-} */
 
 .stats__list > li {
   margin: 0.5rem 0;
@@ -361,4 +368,57 @@ body {
 }
 .container_pokemon:hover .img_fairy {
   filter: drop-shadow(0 0 0.8rem var(--main-type-fairy));
+}
+
+@media (min-width: 768px) {
+  .pokemon {
+    margin: 2rem auto;
+    width: 60vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100px 1fr;
+    padding: 2rem;
+    border-radius: 1rem;
+    height: 55vh;
+  }
+
+  .pokemon__title {
+    grid-column: 1 / 2;
+    grid-row: 1/2;
+    font-size: 4rem;
+    margin: 0;
+    text-align: center;
+  }
+
+  .pokemon__image {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    display: inline-block;
+  }
+
+  .pokemon__description {
+    display: flex;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    font-size: 2rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-around;
+    flex-direction: row;
+  }
+
+  .pokemon__description--type {
+    background-color: #eeeeee5b;
+    border-radius: 2rem;
+    padding: 2.5rem;
+    min-width: 49%;
+    max-width: 60%;
+  }
+
+  .pokemon__description--stats {
+    background-color: #eeeeee5b;
+    border-radius: 2rem;
+    width: 100%;
+    padding: 3rem;
+  }
 }
